# tibberinfo-influxdb

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  get.sh  pyproject.toml  requirements.txt  tibberinfo.py
.github/workflows/: python-checks.yml  python-package.yml
examples/: README.md
