[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibberinfo-influxdb"
version = "0.1.0"
description = "Gets the current energy price, consumption and cost from Tibber's API and pushes it to InfluxDB."
readme = "README.md"
authors = [
  {name = "Øyvind Nilsen (turbosnute)", email = "on@ntnu.no"},
  {name = "Patrik Lermon (kler)"},  
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "asyncio>=3.4.3",
    "influxdb>=5.3.2",
    "python-dateutil>=2.9.0.post0",
    "pytibber>=0.30.8",
]

[project.urls]
Repository = "https://github.com/turbosnute/tibberinfo-influxdb"

[project.scripts]
tibberinfo-influxdb = "tibberinfo.py:__main__"

[tool.hatch.build.targets.wheel]
packages = ["./"]
